--- a/menu.html
+++ b/menu.html
@@ -53,7 +53,7 @@
       console.log(history.length);
       history.go(1);
     }*/
-    if(window.history.forward(1) != null)   window.history.clear();
+    if(window.history.forward(1) != null)   window.history.forward(1);
   </script>
 
   
